# Vider-Play_v2

./: .gitignore  CMakeLists.txt  README.md  av_ptr.h  ffdecoder.h  main.cpp  mainwindow.h  resources.qrc  videoPlay.pro  videoPlay1.pro
src/: main.cpp  stdafx.h
src/buffer/: buffer_monitor.h  frame_buffer.h  packet_buffer.cpp  packet_buffer.h
src/common/: logger.cpp  logger.h  ring_buffer.h  thread_safe_queue.h
src/core/: audio_frame.h  ffdecoder.cpp  ffdecoder.h  frame.h  frame_data.h  irender.h  media_info.h  packet.h  ring_buffer.h  ring_queue.h  sdlrender.cpp  sdlrender.h  videoplayer.cpp  videoplayer.h
src/download/: SimpleDownloader.cpp  SimpleDownloader.h  download_history.cpp  download_history.h  download_manager.cpp  download_manager.h  download_manager_v2.cpp  download_manager_v2.h  download_task.h
src/engine/: audio_decode_thread.cpp  audio_decode_thread.h  decode_pipeline.cpp  demux_thread.cpp  demux_thread.h  module_registry.h  pipeline.h  play_engine.cpp  play_engine.h  playback_state.h  render_prepare_thread.cpp  render_prepare_thread.h  thread_registry.h  video_decode_thread.cpp  video_decode_thread.h
src/network/: LicenseClient.cpp  LicenseClient.h  network_player.cpp  network_player.h  network_stream_manager.cpp  network_stream_manager.h
src/plugins/audio_decoder/: audio_decoder.cpp  audio_decoder.h  audio_decoder_base.h
src/plugins/audio_renderer/: audio_renderer.h  sdl_audio_renderer.cpp  sdl_audio_renderer.h
src/plugins/video_decoder/: decoder_base.h  video_decoder.cpp  video_decoder.h
src/plugins/video_renderer/: sdl_renderer.cpp  sdl_renderer.h  video_renderer.h
src/resource/: av_ptr.h  resource_guard.h  sdl_ptr.h  style.qss
src/resource/themes/: default.qss  furina.qss
src/sync/: audio_clock.h  sync_threshold.h  video_sync.h
src/tests/: test_decoder.h  test_renderer_main.cpp
src/tests/src/tests/: test_renderer_main.cpp
src/theme/: theme_manager.cpp  theme_manager.h
src/toolbox/: audioextractwidget.cpp  audioextractwidget.h  compresswidget.cpp  compresswidget.h  cropwidget.cpp  cropwidget.h  formatconvertwidget.cpp  formatconvertwidget.h  screenshotwidget.cpp  screenshotwidget.h  transcodewidget.cpp  transcodewidget.h  videotoolbox.cpp  videotoolbox.h  watermarkremover.cpp  watermarkremover.h
src/ui/: LoginDialog.cpp  LoginDialog.h  download_widget.cpp  download_widget.h  furina_lottie.cpp  furina_lottie.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  navigation_widget.cpp  navigation_widget.h  network_dialog.cpp  network_dialog.h  progress_bar.cpp  progress_bar.h  title_bar.cpp  title_bar.h  video_widget.cpp  video_widget.h
